--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,30 @@
+body {
+	margin: 0;
+
+}
+
+
+
+
+
+
+
 .jumbotron {
 	background-image:url("images/B1C8M2.jpg");
 /*	height:300px;
 */	background-repeat: no-repeat;
 	background-size: 100%;
 	border-bottom: 4px solid;
+	padding-bottom: 113px;
+	
+}
 
+#jumbotronTest {
+    padding-top: 30px;
+    padding-bottom: 113px;
+    margin-bottom: 30px;
+    color: inherit;
+    background-color: #eee;
 }
 
 
@@ -12,10 +32,22 @@
 img {
 	width: 20%;
 	height: 20%;
+	margin: 1%;
 }
 
 .imgCenter {
 	text-align: center;
+}
+
+.crystalGroup {
+    border: 5px solid #15131366;
+    margin: 3%;
+}
+
+.numberBorders {
+	border: 3px solid #15131366;
+    margin-right: 42%;
+    margin-left: 42%;
 }
 
 #crytsalThree {
@@ -31,10 +63,43 @@ img {
 h1 {
 	text-align: center;
 	color: white;
+
 }
 
 h2 {
 	text-align: center;
 }
 
-/*col-md-6*/
+p {
+	text-align: center;
+}
+
+button {
+
+}
+
+.title {
+	color: white;
+	font-family: 'Alegreya Sans SC', sans-serif;
+	font-size: 40%;
+}
+
+.scoreBoxesTotalScore {
+	padding-bottom: 10%;
+}
+
+.scoreBoxes {
+	padding-bottom: 10%;
+}
+
+.row {
+	padding-top: 4%;
+
+}
+
+.instructionsDiv {
+    padding-bottom: 24px;
+
+
+}
+
