--- a/assets/style.css
+++ b/assets/style.css
@@ -40,12 +40,12 @@ img {
 }
 
 .crystalGroup {
-    border: 5px solid #15131366;
+    border: 5px solid #D8D8DA;
     margin: 3%;
 }
 
 .numberBorders {
-	border: 3px solid #15131366;
+	border: 3px solid #D8D8DA;
     margin-right: 42%;
     margin-left: 42%;
 }
