--- a/assets/style.css
+++ b/assets/style.css
@@ -62,15 +62,19 @@ img {
 h1 {
 	text-align: center;
 	color: white;
-
+	font-family: 'Londrina Solid', cursive;
 }
 
 h2 {
 	text-align: center;
+	font-family: 'Londrina Solid', cursive;
+
+
 }
 
 p {
 	text-align: center;
+	font-family: 'Londrina Solid', cursive;
 }
 
 button {
