--- a/assets/style.css
+++ b/assets/style.css
@@ -106,6 +106,14 @@ button {
     padding-bottom: 24px;
 }
 
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    /* font-family: inherit; */
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+}
+
+
 @media screen and (min-width: 768px)
 .jumbotron .h1, .jumbotron h1 {
     font-size: 96px;
